--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Converts between company name and ticker symbol and vice versa",
   "main": "tickertape.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
